--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,9 +1,8 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-# one:
-#   name: MyString
-#   email: MyString
-
+# shohei:
+#   name: shohei
+#   email: shoaok@gmail.com
+#   password: hogehoge
 # two:
 #   name: MyString
 #   email: MyString
