--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,3 +6,12 @@
 # two:
 #   name: MyString
 #   email: MyString
+michael:
+  name: Michael Example
+  email: michael@example.com
+  password_digest: <%= User.digest('password') %>
+
+archer:
+  name: Sterling Archer
+  email: duchess@example.gov
+  password_digest: <%= User.digest('password') %>
